--- a/src/pages/Alumni/IkatanAlumni/IkatanAlumni.css
+++ b/src/pages/Alumni/IkatanAlumni/IkatanAlumni.css
@@ -5,12 +5,12 @@
     justify-content: end;
 }
 
-.ikatan-alumni-img {
+.ikatan-alumni-container .ikatan-alumni-img {
     position: relative;
     object-fit: cover;
 }
 
-.ikatan-alumni-content {
+.ikatan-alumni-container .ikatan-alumni-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,7 +20,9 @@
     background: linear-gradient(89.79deg, #FFFFFF 45.35%, rgba(255, 255, 255, 0) 80.24%);
 }
 
-.ikatan-alumni-card {
+.ikatan-alumni-container .ikatan-alumni-card {
+    display: flex;
+    flex-direction: column;
     margin-left: 10%;
     width: 561px;
 }
