--- a/src/components/SectionBlue/SectionBlue.css
+++ b/src/components/SectionBlue/SectionBlue.css
@@ -4,3 +4,11 @@
     width: 100%;
     height: 400px;
 }
+
+.image-blue{
+    filter: blur(5px);
+    position: absolute;
+    right: 0%;
+    opacity: 0.5;
+    z-index: -9999;
+}
