--- a/src/pages/HubungiKami/HubungiKami.css
+++ b/src/pages/HubungiKami/HubungiKami.css
@@ -1,13 +1,29 @@
 .hubungi-kami-container {
     display: flex;
     flex-direction: column;
-    margin: 3% 10% 10% 10%;
 }
 
 .bg-hub{
  /* background-image: url(../../assets/images/bg-hubungi.png); */
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 660px;
+}
+
+.form-hub{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 5% 10%;
+    background-color: #003F66;
+}
+.form-row {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.form-row .form-control {
+    margin-top: 11px;
 }
 
