--- a/src/pages/Admin/AkademikAdmin/KeperawatanAdmin/KeperawatanAdmin.css
+++ b/src/pages/Admin/AkademikAdmin/KeperawatanAdmin/KeperawatanAdmin.css
@@ -8,3 +8,13 @@
     min-width: 900px !important;
 }
 
+.black-shadow-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+  }
+  
+
