adding mobile section responsive

--- a/src/components/SectionBlue/SectionBlue.css
+++ b/src/components/SectionBlue/SectionBlue.css
@@ -1,14 +1,37 @@
-.section-blue{
-    background-image: linear-gradient(180deg, #2EB4E8 0%, #1871A9 100%);
-    mix-blend-mode: multiply;
-    width: 100%;
-    height: 400px;
-}
+@media only screen and (min-width: 700px) {
+    .section-blue{
+        background-image: linear-gradient(180deg, #2EB4E8 0%, #1871A9 100%);
+        mix-blend-mode: multiply;
+        width: 100%;
+        height: 400px;
+    }
+    
+    .image-blue{
+        filter: blur(5px);
+        position: absolute;
+        right: 0%;
+        opacity: 0.5;
+        z-index: -9999;
+    }
+  }
 
-.image-blue{
-    filter: blur(5px);
-    position: absolute;
-    right: 0%;
-    opacity: 0.5;
-    z-index: -9999;
-}
+
+@media only screen and (max-width: 600px) {
+    .mobile-size{
+        width: 75px;
+    }
+    .section-blue{
+        background-image: linear-gradient(180deg, #2EB4E8 0%, #1871A9 100%);
+        mix-blend-mode: multiply;
+        width: 100%;
+        height: 600px;
+    }
+    
+    .image-blue{
+        filter: blur(5px);
+        position: absolute;
+        right: 0%;
+        opacity: 0.5;
+        z-index: -9999;
+    }
+  }
