--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,35 +1,65 @@
-.w-100 {
-    width: 100% !important;
-    height: 100vh;
-  }
-
-  .carousel .carousel-indicators button {
-   width: 10px;
-   height: 10px;
-   border-radius: 100%;
- }
-
- .text-carousel {
-    position: relative;
-    bottom: 13rem;
-    left: 42%;
-    text-align: left;
-  }
-
- .btn-carousel {
-    position: relative;
-    bottom: 12rem;
-    left: 6rem;
-    width: 11rem;
-    height: 3rem;
-    color: #2EB4E8; 
-    background-color: none;
-    border-radius: 35px;
-    border: 1px solid;
-    border: 2px solid #2EB4E8;
-  }
+  @media only screen and (min-width: 700px) {
+    .w-100 {
+      width: 100% !important;
+      height: 100vh;
+    }
   
-  .btn-carousel:hover {
-    background-color: #2EB4E8;
-    color: white;
+    .carousel .carousel-indicators button {
+     width: 10px;
+     height: 10px;
+     border-radius: 100%;
+   }
+  
+   .text-carousel {
+      position: relative;
+      bottom: 13rem;
+      left: 42%;
+      text-align: left;
+    }
+  
+   .btn-carousel {
+      position: relative;
+      bottom: 12rem;
+      left: 6rem;
+      width: 11rem;
+      height: 3rem;
+      color: #2EB4E8; 
+      background-color: none;
+      border-radius: 35px;
+      border: 1px solid;
+      border: 2px solid #2EB4E8;
+    }
+    
+    .btn-carousel:hover {
+      background-color: #2EB4E8;
+      color: white;
+    }
+  
+  }
+
+
+  @media only screen and (max-width: 600px) {
+    .btn-carousel {
+      position: relative; 
+      font-size: 9px;
+      left: 2rem;
+      width: 5rem;
+      height: 2rem;
+      color: white; 
+      background-color: #2EB4E8;
+      border-radius: 35px;
+      border: 1px solid;
+      border: 1px solid #2EB4E8;
+    }
+    .btn-carousel:hover {
+      background-color: #2EB4E8;
+      color: white;
+    }
+    .font-headline-mobile{
+      font-size: 12px;
+    }
+
+    .font-banner-mobile{
+      font-size: 18px;
+    }
   }
