--- a/src/components/SectionNilaiUtamaKami/SectionNilaiUtamaKami.css
+++ b/src/components/SectionNilaiUtamaKami/SectionNilaiUtamaKami.css
@@ -2,3 +2,9 @@
     color: #278BC8;
     font-weight: bold;
 }
+
+@media only screen and (max-width: 700px) {
+    .mobile-size{
+        width: 75px;
+    }
+  }
