--- a/src/pages/Akademik/AdministrasiRumahSakit/AdministrasiRumahSakit.css
+++ b/src/pages/Akademik/AdministrasiRumahSakit/AdministrasiRumahSakit.css
@@ -1,28 +1,70 @@
-.administrasi-container {
-    display: flex;
-    flex-direction: column;
-    margin: 3% 10% 10% 10%;
-}
+ @media only screen and (min-width: 700px) {
+    .image-adm-rs{
+        width: 100%;
+    }
+    .administrasi-container {
+        display: flex;
+        flex-direction: column;
+        margin: 3% 10% 10% 10%;
+    }
+    
+    .centered-adm {
+        position: absolute;
+        top: 30rem;
+        left: 54%;
+        transform: translate(-50%, -50%);
+      }
+    
+    .bg-color-adm {
+        background-color: linear-gradient(90deg, #FFFFFF 0%, #F5F5F5 100%);
+    }
+    
+    .btn-blue {
+        background-color: #278BC8;
+    }
+    
+    .card {
+        padding: 25px 0 25px 0;
+        width: 85%;
+        height: 110%;
+        box-shadow: 0 0px 20px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+     }
+ }
 
-.centered-adm {
-    position: absolute;
-    top: 30rem;
-    left: 54%;
-    transform: translate(-50%, -50%);
-  }
+ @media only screen and (max-width: 600px) {
 
-.bg-color-adm {
-    background-color: linear-gradient(90deg, #FFFFFF 0%, #F5F5F5 100%);
-}
+    .image-adm-rs{
+        width: auto;
+        height: 700px;
+    }
 
-.btn-blue {
-    background-color: #278BC8;
-}
-
-.card {
-    padding: 25px 0 25px 0;
-    width: 85%;
-    height: 110%;
-    box-shadow: 0 0px 20px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+    .administrasi-container {
+        display: flex;
+        flex-direction: column;
+        margin: 3% 10% 10% 10%;
+    }
+    
+    .centered-adm {
+        position: absolute;
+        top: 30rem;
+        left: 54%;
+        transform: translate(-50%, -50%);
+      }
+    
+    .bg-color-adm {
+        background-color: linear-gradient(90deg, #FFFFFF 0%, #F5F5F5 100%);
+    }
+    
+    .btn-blue {
+        background-color: #278BC8;
+    }
+    
+    .card {
+        padding: 25px 0 25px 0;
+        width: 100%;
+        height: 110%;
+        box-shadow: 0 0px 20px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+     }
  }
