--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,36 +1,78 @@
-.circlesbox {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-  }
+  @media only screen and (min-width: 700px) {
+    .circlesbox {
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+    }
+    
+    .circlesbox:before {
+      content: "";
+      position: absolute;
+      z-index: 1;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      height: 3px;
+      width: 100%;
+      background: #278BC8;
+    }
+    
+    .circle {
+       position: relative;
+       z-index: 2;
+       border: 2px solid #278BC8;   
+       background: #fff;
+       box-shadow: 0 0 0 12px #fff;
+       width:95px;
+       height:95px;
+       border-radius:50%;
+       line-height: 85px;
+       font-weight: bold;
+    }
   
-  .circlesbox:before {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 3px;
-    width: 100%;
-    background: #278BC8;
-  }
-  
-  .circle {
-     position: relative;
-     z-index: 2;
-     border: 2px solid #278BC8;   
-     background: #fff;
-     box-shadow: 0 0 0 12px #fff;
-     width:95px;
-     height:95px;
-     border-radius:50%;
-     line-height: 85px;
-     font-weight: bold;
+    .text-blue {
+      color: #278BC8;
+    }
   }
 
-  .text-blue {
-    color: #278BC8;
+  @media only screen and (max-width: 600px) {
+    .circlesbox {
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+    }
+    
+    .circlesbox:before {
+      content: "";
+    
+      z-index: 1;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      height: 3px;
+      width: 100%;
+      background: #278BC8;
+    }
+    
+    .circle {
+      margin: auto;
+       z-index: 2;
+       border: 2px solid #278BC8;   
+       background: #fff;
+       box-shadow: 0 0 0 8px #fff;
+       width:65px;
+       height:65px;
+       border-radius:50%;
+       line-height: 60px;
+       font-weight: bold;
+       font-size: 15px;
+    }
+
+    .text-blue {
+      color: #278BC8;
+    }
   }
