--- a/src/pages/HubungiKami/HubungiKami.css
+++ b/src/pages/HubungiKami/HubungiKami.css
@@ -27,3 +27,35 @@
     margin-top: 11px;
 }
 
+
+@media (max-width: 768px) {
+.top-info {
+    display: flex;
+    flex-direction: column;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.img-bg {
+    width: 100%;
+    height: auto;
+    max-height: none;
+    /* margin-top: 340px; */
+  }
+/* .contact-cell {
+    display: flex;
+    align-items: center;
+  }
+  
+  .contact-icon {
+    margin-right: 5px;
+  }
+  
+  .contact-label {
+    font-size: 14px;
+  }
+  
+  .contact-data {
+    font-size: 14px;
+  } */
+}
