--- a/src/pages/PMB/JalurBeasiswa/JalurBeasiswa.css
+++ b/src/pages/PMB/JalurBeasiswa/JalurBeasiswa.css
@@ -41,3 +41,24 @@
 .jalur-beasiswa-container .jalur-beasiswa-persyaratan-card li {
     margin: 10px 0;
 }
+@media (max-width: 768px) {
+    .jalur-beasiswa-container .jalur-beasiswa-type-row {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .jalur-beasiswa-container .jalur-beasiswa-type {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 312px;
+        min-height: 268px;
+        background: #FFFFFF;
+        box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.12), 8px 8px 24px rgba(0, 0, 0, 0.08);
+        border-radius: 10px;
+        margin: 7% 0;
+        padding: 40px;
+        text-align: center;
+    }
+}
