--- a/src/pages/HubungiKami/HubungiKami.css
+++ b/src/pages/HubungiKami/HubungiKami.css
@@ -59,3 +59,19 @@
     font-size: 14px;
   } */
 }
+
+@media (max-width: 1024px) {
+    .top-info {
+        display: flex;
+        flex-direction: column;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    
+    .img-bg {
+        width: 100%;
+        height: auto;
+        max-height: none;
+        /* margin-top: 340px; */
+      }
+}
