--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -41,6 +41,7 @@
   @media only screen and (max-width: 600px) {
     .btn-carousel {
       position: relative; 
+      top: -2rem;
       font-size: 9px;
       left: 2rem;
       width: 5rem;
@@ -61,5 +62,12 @@
 
     .font-banner-mobile{
       font-size: 18px;
+    }
+
+    .text-carousel {
+      position: relative;
+      top: -3rem;
+      left: 0%;
+      text-align: left;
     }
   }
