--- a/src/pages/Akademik/AdministrasiRumahSakit/AdministrasiRumahSakit.css
+++ b/src/pages/Akademik/AdministrasiRumahSakit/AdministrasiRumahSakit.css
@@ -10,7 +10,7 @@
     
     .centered-adm {
         position: absolute;
-        top: 30rem;
+        top: 23%;
         left: 54%;
         transform: translate(-50%, -50%);
       }
