--- a/src/pages/Fasilitas/SaranaDanPrasarana/SaranaDanPrasarana.css
+++ b/src/pages/Fasilitas/SaranaDanPrasarana/SaranaDanPrasarana.css
@@ -6,3 +6,12 @@
             opacity: 0.3;
     }
 }
+
+@media only screen and (min-width: 700px) {
+    .centered-sarana {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+}
