--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,7 +1,7 @@
   @media only screen and (min-width: 700px) {
     .w-100 {
       width: 100% !important;
-      height: 100vh;
+      height: auto;
     }
   
     .carousel .carousel-indicators button {
@@ -12,14 +12,14 @@
   
    .text-carousel {
       position: relative;
-      bottom: 13rem;
+      bottom: 11rem;
       left: 42%;
       text-align: left;
     }
   
    .btn-carousel {
       position: relative;
-      bottom: 12rem;
+      bottom: 9rem;
       left: 6rem;
       width: 11rem;
       height: 3rem;
@@ -41,11 +41,11 @@
   @media only screen and (max-width: 600px) {
     .btn-carousel {
       position: relative; 
-      top: -2rem;
-      font-size: 9px;
+      top: -0.5rem;
+      font-size: 7px;
       left: 2rem;
       width: 5rem;
-      height: 2rem;
+      height: 1.5rem;
       color: white; 
       background-color: #2EB4E8;
       border-radius: 35px;
@@ -61,13 +61,14 @@
     }
 
     .font-banner-mobile{
-      font-size: 18px;
+      font-size: 15px;
     }
 
     .text-carousel {
       position: relative;
-      top: -3rem;
-      left: 0%;
+      white-space: pre-line;
+      top: -0.5rem;
+      left: 37%;
       text-align: left;
     }
   }
