--- a/src/pages/Alumni/AlumniStory/AlumniStory.css
+++ b/src/pages/Alumni/AlumniStory/AlumniStory.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    padding: 0 0 8% 8%;
+    padding-bottom: 8%;
     margin-top: 2rem;
 }
 
@@ -12,6 +12,7 @@
     flex-wrap: wrap;
     gap: 48px;
     margin-top: 5rem;
+    justify-content: center;
 }
 
 .alumni-story-container .card-wrapper {
@@ -19,11 +20,14 @@
     min-height: 432px;
     background-color: #ffff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 8px;
 }
 
 .alumni-story-container .card-img {
     height: 224px;
     object-fit: cover;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 
 .alumni-story-container .card-content {
