--- a/src/pages/Alumni/AlumniStory/AlumniStory.css
+++ b/src/pages/Alumni/AlumniStory/AlumniStory.css
@@ -5,13 +5,19 @@
     padding-bottom: 8%;
     margin-top: 2rem;
 }
+.ikatan-alumni-title{
+    font-size: 40px;
+    color: #278BC8;
+    font-weight: 600;
+    align-self: center;
+  }
 
 .alumni-story-container .alumni-story-card {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 48px;
-    margin-top: 5rem;
+    margin-top: 2rem;
     justify-content: center;
 }
 
@@ -32,4 +38,13 @@
 
 .alumni-story-container .card-content {
     padding: 24px;
+}
+
+@media (max-width: 768px) {
+    .ikatan-alumni-title{
+      font-size: 22px;
+      color: #278BC8;
+      font-weight: 600;
+      align-self: center;
+    }
 }
