--- a/src/pages/PMB/JalurMandiri/JalurMandiri.css
+++ b/src/pages/PMB/JalurMandiri/JalurMandiri.css
@@ -3,6 +3,18 @@
     flex-direction: column;
     margin: 5% 10%;
 }
+.ikatan-alumni-title{
+    font-size: 40px;
+    color: #278BC8;
+    font-weight: 600;
+    align-self: center;
+  }
+  .ikatan-alumni-titles{
+    font-size: 40px;
+    color: #278BC8;
+    font-weight: 600;
+    align-self: center;
+  }
 
 .jalur-mandiri-container .jalur-mandiri-progress {
     display: flex;
@@ -63,6 +75,19 @@
         flex-direction: column;
         /* margin: 5% 10%; */
     }
+    .ikatan-alumni-title{
+        font-size: 22px;
+        color: #278BC8;
+        font-weight: 600;
+        align-self: center;
+      }
+      .ikatan-alumni-titles {
+        font-size: 22px;
+        color: #278BC8;
+        font-weight: 600;
+        align-self: left;
+      }
+      
     .jalur-mandiri-progress-item {
         margin: auto;
     }
