--- a/src/pages/PMB/PenerimaanMahasiswaBaru/PenerimaanMahasiswaBaru.css
+++ b/src/pages/PMB/PenerimaanMahasiswaBaru/PenerimaanMahasiswaBaru.css
@@ -2,7 +2,12 @@
     display: flex;
     flex-direction: column;
 }
-
+.ikatan-alumni-title{
+    font-size: 32px;
+    color: #278BC8;
+    font-weight: 600;
+    align-self: center;
+}
 .penerimaan-mahasiswa-container .penerimaan-mahasiswa-header {
     background-repeat:no-repeat;
     background-size: 100% 480px;
@@ -65,5 +70,16 @@
     border: 1px solid;
     border: 1px solid #2EB4E8;
   }
+
+
+  
+@media (max-width: 768px) {
+    .ikatan-alumni-title{
+      font-size: 22px;
+      color: #278BC8;
+      font-weight: 600;
+      align-self: center;
+    }
+}
   
   
