--- a/src/pages/Fasilitas/SaranaDanPrasarana/SaranaDanPrasarana.css
+++ b/src/pages/Fasilitas/SaranaDanPrasarana/SaranaDanPrasarana.css
@@ -10,7 +10,7 @@
 @media only screen and (min-width: 700px) {
     .centered-sarana {
         position: absolute;
-        top: 40%;
+        top: 365px;
         left: 50%;
         transform: translate(-50%, -50%);
       }
