--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,25 +6,30 @@
       flex-wrap: nowrap;
       justify-content: space-between;
     }
+
+    .bg-visi{
+      background-image: url(../../../src/assets/images/bg-visi-misi.png);
+    }
     
     .circlesbox:before {
       content: "";
       position: absolute;
       z-index: 1;
-      left: 0;
+      left: 15px;
+      right: -15px;
       top: 50%;
       transform: translateY(-50%);
       height: 3px;
-      width: 100%;
+      width: 95%;
       background: #278BC8;
     }
-    
+
     .circle {
        position: relative;
        z-index: 2;
-       border: 2px solid #278BC8;   
+       border: 4px solid #278BC8;   
        background: #fff;
-       box-shadow: 0 0 0 12px #fff;
+       box-shadow: 0 0 0 0px #fff;
        width:95px;
        height:95px;
        border-radius:50%;
@@ -61,9 +66,9 @@
     .circle {
       margin: auto;
        z-index: 2;
-       border: 2px solid #278BC8;   
+       border: 4px solid #278BC8;   
        background: #fff;
-       box-shadow: 0 0 0 8px #fff;
+       box-shadow: 0 0 0 0px #fff;
        width:65px;
        height:65px;
        border-radius:50%;
