--- a/src/pages/UPMI/KebijakanUpmi/KebijakanUpmi.css
+++ b/src/pages/UPMI/KebijakanUpmi/KebijakanUpmi.css
@@ -4,3 +4,14 @@
     margin: 3% 10% 10% 10%;
 }
 
+.floating-bg{
+    position: absolute;
+    z-index: -1;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 40%; 
+    opacity: 10%;
+    width: 15%;
+}
+
