--- a/src/pages/Akademik/Keperawatan/Keperawatan.css
+++ b/src/pages/Akademik/Keperawatan/Keperawatan.css
@@ -78,7 +78,7 @@
 @media only screen and (max-width: 600px) {
 
     .image-banner-keperawatan{
-        height: 70vh;
+        height: 35rem;
         width: 100%;
         object-fit: cover;
     }
